# docs/swagger.yaml
@@ -186,9 +186,6 @@ definitions:
       begin:
         description: 开始成交日期
         type: string
-      customerId:
-        description: 客户id
-        type: integer
       end:
         description: 结束成交日期
         type: string
@@ -611,27 +608,72 @@ definitions:
     type: object
   dto.LoginDingReq:
     properties:
-      client:
-        description: 客户端类型 暂未定义
+      clientId:
+        description: 客户端id
+        type: string
+      clientVer:
+        description: 客户端版本
         type: string
       code:
         description: 钉钉登录code
         type: string
-      device:
-        description: 客户端设备类型
-        type: string
-      inviteType:
-        description: 邀请人类型 1企业内部
-        type: integer
-      inviter:
-        description: 邀请人id
+      inviteCode:
+        description: 邀请码
         type: string
       name:
         description: 真实姓名（在该企业的名字）
         type: string
+      os:
+        description: 操作系统
+        type: string
+      osVer:
+        description: 操作系统版本
+        type: string
+      srcId:
+        description: 来源id
+        type: string
       state:
         description: 服务器返回state
         type: string
+    type: object
+  dto.LoginLogDto:
+    properties:
+      clientId:
+        description: 客户端
+        type: string
+      clientVer:
+        description: 操作系统
+        type: string
+      id:
+        description: 主键
+        type: integer
+      ip:
+        description: 登录ip
+        type: string
+      method:
+        description: 登录方式
+        type: integer
+      os:
+        description: 操作系统
+        type: string
+      osVer:
+        description: 操作系统版本
+        type: string
+      region:
+        description: 地域
+        type: string
+      uid:
+        description: 用户id
+        type: integer
+    type: object
+  dto.LoginLogGetPageReq:
+    properties:
+      page:
+        description: 页码
+        type: integer
+      pageSize:
+        description: 每页大小
+        type: integer
     type: object
   dto.LoginOK:
     properties:
@@ -658,14 +700,32 @@ definitions:
     type: object
   dto.LoginReq:
     properties:
+      clientId:
+        description: 客户端id
+        type: string
+      clientVer:
+        description: 客户端版本
+        type: string
       code:
         description: 验证码
+        type: string
+      inviteCode:
+        description: 邀请码
         type: string
       name:
         description: 真实姓名
         type: string
+      os:
+        description: 操作系统
+        type: string
+      osVer:
+        description: 操作系统版本
+        type: string
       password:
         description: 密码 密码不为空 为密码登录 否则验证码登录
+        type: string
+      srcId:
+        description: 来源id
         type: string
       username:
         description: 手机号或者邮箱
@@ -707,26 +767,26 @@ definitions:
       client:
         description: 客户端类型 未定义
         type: string
-      inviteType:
-        description: 1企业内部邀请 2 用户邀请
-        type: integer
-      inviter:
-        description: 邀请人id
+      clientId:
+        description: 客户端id
         type: string
-      last_login_device:
-        description: 登录设备
+      clientVer:
+        description: 客户端版本
         type: string
-      last_login_port:
-        description: 登录平台
+      inviteCode:
+        description: 邀请码
         type: string
       os:
         description: 操作系统
         type: string
+      osVer:
+        description: 操作系统版本
+        type: string
       scene:
         description: 随机参数
         type: string
-      source:
-        description: 来源（最长32位）
+      srcId:
+        description: 来源id
         type: string
     type: object
   dto.MyUserinfoResp:
@@ -870,17 +930,35 @@ definitions:
     type: object
   dto.RegisterReq:
     properties:
+      clientId:
+        description: 客户端id
+        type: string
+      clientVer:
+        description: 客户端版本
+        type: string
       code:
         description: 验证码
         type: string
+      inviteCode:
+        description: 邀请码
+        type: string
       name:
         description: 真实姓名
+        type: string
+      os:
+        description: 操作系统
+        type: string
+      osVer:
+        description: 操作系统版本
         type: string
       password:
         description: 密码
         type: string
       rePassword:
         description: 重复密码
+        type: string
+      srcId:
+        description: 来源id
         type: string
       username:
         description: 手机号或者邮箱
@@ -1732,7 +1810,7 @@ definitions:
         type: string
       teamId:
         description: 团队id
-        type: integer
+        type: string
       teamName:
         description: 团队名
         type: string
@@ -1936,7 +2014,7 @@ definitions:
         description: 备注
         type: string
       source:
-        description: 来源 1场地 2转介绍
+        description: 来源 1场地 2转介绍 3 加班
         type: integer
       tags:
         description: 标签
@@ -2233,6 +2311,39 @@ definitions:
         type: integer
       updatedAt:
         description: 最后更新时间
+        type: string
+    type: object
+  models.LoginLog:
+    properties:
+      clientId:
+        description: 客户端
+        type: string
+      clientVer:
+        description: 操作系统
+        type: string
+      id:
+        description: 主键
+        type: integer
+      ip:
+        description: 登录ip
+        type: string
+      method:
+        description: 登录方式
+        type: integer
+      os:
+        description: 操作系统
+        type: string
+      osVer:
+        description: 操作系统版本
+        type: string
+      region:
+        description: 地域
+        type: string
+      uid:
+        description: 用户id
+        type: integer
+      updatedAt:
+        description: 更新时间
         type: string
     type: object
   models.PubNotice:
@@ -2731,6 +2842,9 @@ definitions:
       birthday:
         description: 生日
         type: string
+      clientId:
+        description: 客户端id
+        type: string
       createdAt:
         description: 创建时间
         type: string
@@ -2743,6 +2857,15 @@ definitions:
       id:
         description: 主键
         type: integer
+      inviteCode:
+        description: 邀请码
+        type: string
+      inviter:
+        description: 邀请人
+        type: integer
+      ipLocation:
+        description: 地域
+        type: string
       lockTime:
         description: 锁定结束时间
         type: string
@@ -2761,8 +2884,14 @@ definitions:
       platformRoleId:
         description: 平台角色ID -1为超管 >0为角色id
         type: integer
+      regIp:
+        description: 注册ip
+        type: string
       remark:
         description: 备注
+        type: string
+      srcId:
+        description: 来源id
         type: string
       status:
         description: 状态 1正常
@@ -3195,27 +3324,6 @@ paths:
       security:
       - Bearer: []
       summary: Page接口
-      tags:
-      - dental-Bill
-  /api/v1/dental/bill/todoMethod:
-    post:
-      consumes:
-      - application/json
-      parameters:
-      - description: 团队id
-        in: header
-        name: teamId
-        type: integer
-      - description: body
-        in: body
-        name: data
-        required: true
-        schema:
-          $ref: '#/definitions/dto.StQueryReq'
-      responses: {}
-      security:
-      - Bearer: []
-      summary: TodoMethod
       tags:
       - dental-Bill
   /api/v1/dental/bill/update:
@@ -4819,6 +4927,163 @@ paths:
       summary: 用户登录
       tags:
       - sys-sso
+  /api/v1/sys/login-log/create:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: 团队id
+        in: header
+        name: teamId
+        type: integer
+      - description: body
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/dto.LoginLogDto'
+      responses:
+        "200":
+          description: '{"code": 200, "data": [...]}'
+          schema:
+            allOf:
+            - $ref: '#/definitions/base.Resp'
+            - properties:
+                data:
+                  $ref: '#/definitions/models.LoginLog'
+              type: object
+      security:
+      - Bearer: []
+      summary: 创建LoginLog
+      tags:
+      - sys-LoginLog
+  /api/v1/sys/login-log/del:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: 团队id
+        in: header
+        name: teamId
+        type: integer
+      - description: body
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/base.ReqIds'
+      responses:
+        "200":
+          description: '{"code": 200, "data": [...]}'
+          schema:
+            allOf:
+            - $ref: '#/definitions/base.Resp'
+            - properties:
+                data:
+                  $ref: '#/definitions/models.LoginLog'
+              type: object
+      security:
+      - Bearer: []
+      summary: 删除LoginLog
+      tags:
+      - sys-LoginLog
+  /api/v1/sys/login-log/get:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: 团队id
+        in: header
+        name: teamId
+        type: integer
+      - description: body
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/base.ReqId'
+      responses:
+        "200":
+          description: '{"code": 200, "data": [...]}'
+          schema:
+            allOf:
+            - $ref: '#/definitions/base.Resp'
+            - properties:
+                data:
+                  $ref: '#/definitions/models.LoginLog'
+              type: object
+      security:
+      - Bearer: []
+      summary: 获取LoginLog
+      tags:
+      - sys-LoginLog
+  /api/v1/sys/login-log/page:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: 团队id
+        in: header
+        name: teamId
+        type: integer
+      - description: body
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/dto.LoginLogGetPageReq'
+      responses:
+        "200":
+          description: '{"code": 200, "data": [...]}'
+          schema:
+            allOf:
+            - $ref: '#/definitions/base.Resp'
+            - properties:
+                data:
+                  allOf:
+                  - $ref: '#/definitions/base.PageResp'
+                  - properties:
+                      list:
+                        items:
+                          $ref: '#/definitions/models.LoginLog'
+                        type: array
+                    type: object
+              type: object
+      security:
+      - Bearer: []
+      summary: 获取LoginLog列表
+      tags:
+      - sys-LoginLog
+  /api/v1/sys/login-log/update:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: 团队id
+        in: header
+        name: teamId
+        type: integer
+      - description: body
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/dto.LoginLogDto'
+      responses:
+        "200":
+          description: '{"code": 200, "data": [...]}'
+          schema:
+            allOf:
+            - $ref: '#/definitions/base.Resp'
+            - properties:
+                data:
+                  $ref: '#/definitions/models.LoginLog'
+              type: object
+      security:
+      - Bearer: []
+      summary: 更新LoginLog
+      tags:
+      - sys-LoginLog
   /api/v1/sys/loginDing:
     post:
       consumes:
